<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Jemima\'s Groceries</string>
    <string name="title_activity_add_grocery">Add a grocery item</string>
    <string name="title_activity_add_inventory_item">Add an inventory item</string>
    <string name="title_activity_edit_grocery_item">Edit grocery item</string>
    <string name="title_activity_edit_inventory_item">Edit inventory item</string>

    <string name="hello_world">Hello world!</string>

    <string name="groceries">Groceries</string>
    <string name="inventory">Inventory</string>

    <string name="action_settings">Settings</string>

    <string name="label_name">Name</string>
    <string name="label_qty">Quantity</string>
    <string name="label_expiration_date">Expiration</string>
    <string name="label_checked">Checked</string>

    <string name="hint_name">What\'s the name of the item?</string>
    <string name="hint_qty">How many?</string>
    <string name="hint_expiration_date">When will the item expire?</string>

    <string name="empty_grocery_list">Grocery time! Start listing down items.</string>
    <string name="grocery_item_saved">Added grocery item!</string>
    <string name="item_name_is_empty">Please enter a name for the item</string>
    <string name="item_qunatity_is_empty">Please enter how many of the item you want to buy</string>
    <string name="inventory_item_qunatity_is_empty">
        Please enter how many of the item you have on stock</string>
    <string name="item_already_on_the_list">You already have that item on your list.</string>
    <string name="inventory_item_saved">Added inventory item!</string>

    <string name="btn_add">Add</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_store">Store</string>

    <string name="format_exp_date_inventory_list_item">
        Exp date: <xliff:g id="date">%1$s</xliff:g></string>
    <string name="none">none</string>

    <string name="grocery_item_updated">Grocery item was updated!</string>
    <string name="grocery_item_deleted">Grocery item was deleted!</string>
    <string name="inventory_item_updated">Inventory item was updated!</string>
    <string name="inventory_item_deleted">Inventory item was updated!</string>

    <string name="expiring_items">Some of your stored items are expiring.</string>

    <string name="add_anyway">Add it anyway</string>
    <string name="dont_add">Don\'t add</string>

    <string name="format_available_inventory_list_item">
        You have <xliff:g id="qty">%1$s</xliff:g>
        of this item <xliff:g id="name">%2$s</xliff:g>
        in your inventory.</string>

    <string name="empty_inventory_list">No items in storage.</string>

    <string name="nothing_to_move_to_inventory">
        You have no checked grocery items to move to inventory.</string>

    <string name="ready_to_store">Ready to store checked items to inventory?</string>

    <string name="yes">Yes</string>
    <string name="not_yet">Not yet</string>

    <string name="grocery_items_saved_to_inventory">Checked grocery items have been
        stored in inventory. Make sure to set their expiration dates!</string>

    <string name="pref_grocery_time_notif_title">Grocery Time Notification</string>
    <string name="pref_grocery_time_notif_key">groceryt time notif key</string>

    <string name="pref_grocery_time_notif_enable_key">grocery time notif enabled</string>
    <string name="pref_grocery_time_notif_enable_title">Turn on grocery time notification?</string>
    <string name="pref_grocery_time_notif_enable_deafult">true</string>
    <string name="pref_grocery_time_notif_enable_true">On</string>
    <string name="pref_grocery_time_notif_enable_false">Off</string>

</resources>
