<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:id="@+id/textView"
        android:paddingRight="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_inventory_item_name"
        android:layout_row="0"
        android:layout_column="1"
        android:hint="@string/hint_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_qty"
        android:id="@+id/textView2"
        android:layout_row="1"
        android:layout_column="0"
        android:paddingRight="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/text_inventory_item_qty"
        android:layout_row="1"
        android:layout_column="1"
        android:hint="@string/hint_qty"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_expiration_date"
        android:id="@+id/textView3"
        android:layout_row="2"
        android:layout_column="0"
        android:paddingRight="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_expiration_date"
        android:layout_row="2"
        android:layout_column="1"
        android:hint="@string/hint_expiration_date"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        android:id="@+id/btn_add_inventory"
        android:layout_row="3"
        android:layout_column="1" />

</GridLayout>